# grsrpc

./: Cargo.toml
grsrpc/: Cargo.toml
grsrpc-macro/: Cargo.toml
grsrpc-macro/src/: lib.rs
grsrpc/src/: client.rs  lib.rs  service.rs
src/: lib.rs
