[workspace]
members = ["grsrpc", "grsrpc-macro"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Li Datu <datutech@outlook.com>"]
description = "Bi-directional rust-only RPC"
repository = "https://github.com/truelidatu/grsrpc"
homepage = "https://github.com/truelidatu/grsrpc"
readme = "README.md"
license = "MIT"
keywords = ["rpc"]
categories = ["rust", "wasm"]
